--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -45,7 +45,7 @@
       position: relative;
       left:0;
       background-color: black;
-      height: 90vh;
+      height: 80vh;
       padding: 0;
       min-height: 25rem;
       width: 100%;
@@ -60,9 +60,11 @@
           min-width: 100%;
           min-height: 100%;
           width: auto;
-          height: auto;
+          height: 120vh !important;
           z-index: 0;
           border: none;
+          margin: 0;
+          padding: 0;
           -ms-transform: translateX(-50%) translateY(-50%);
           -moz-transform: translateX(-50%) translateY(-50%);
           -webkit-transform: translateX(-50%) translateY(-50%);
@@ -73,44 +75,46 @@
     .Intro_Row {
       z-index: 1;
       overflow: hidden;
-      background-color:blue;
+      padding: 0;
+      margin: 0;
     }
+      .Intro_Row_Column {
+        padding: 48px;
+        margin: 0;
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+        overflow: hidden;
+      }
       .Intro_Row_Background {
-          width: 100%;
-          left: 0;
-          top: 0;
-          transition: .5s;        
+        width: 100%;        
+        left: 0;
+        transition:  0s ease-in-out;
+        position: absolute;
+        z-index: -1;
       } 
             .Home_Logo {
-              width: 800px;
-              
               z-index: 1;
-
+              color: white;
+              font-size: 24px;
+              font-weight: 100;
+              font-family: 'Chromatica', 'Arial', sans-serif;
+              height: auto;
+              padding: 0 48px;
             }
             .Subtitle {
               color: white;
               font-size: 24px;
               font-weight: 100;
               font-family: 'Chromatica', 'Arial', sans-serif;
-              position: absolute;
-              width: 800px;
-              height: auto;
-              left: calc(50% - 400px);
-              top: calc(55%);
               z-index: 1;
-              padding: 0 48px;
             }
-
-
-
-
-
-
-
 
     .Grid_List  {
       z-index: 1;
       overflow: hidden;
+      padding-top: 1px;
+      background-color: black;
     }
      
           .Project_Image  {
@@ -182,6 +186,7 @@
 .pink {
   background-color: pink;
 }
+
 
 
 
