--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -45,7 +45,7 @@
       position: relative;
       left:0;
       background-color: black;
-      height: 80vh;
+      height: 75vh;
       padding: 0;
       min-height: 25rem;
       width: 100%;
@@ -59,8 +59,8 @@
           left: 50%;
           min-width: 100%;
           min-height: 100%;
-          width: auto;
-          height: 120vh !important;
+          width: 120%;
+          height: 130vh !important;
           z-index: 0;
           border: none;
           margin: 0;
@@ -101,8 +101,10 @@
               font-family: 'Chromatica', 'Arial', sans-serif;
               height: auto;
               padding: 0 48px;
+              width: 50%;
             }
             .Subtitle {
+              width: 51%;
               color: white;
               font-size: 24px;
               font-weight: 100;
